--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@iconify/react": "^4.1.1",
     "@iconify/tailwind": "^0.1.3",
+    "@nanostores/persistent": "^0.9.1",
+    "@nanostores/react": "^0.7.1",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.16",
     "@types/swiper": "^6.0.0",
     "astro": "^3.5.7",
+    "nanostores": "^0.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swiper": "^11.0.4",
