--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "@astrojs/netlify": "^3.1.1",
+    "@astrojs/node": "^8.2.3",
     "@astrojs/react": "^3.0.6",
     "@astrojs/tailwind": "^5.0.2",
     "@astrojs/vercel": "^5.2.0",
@@ -27,6 +28,7 @@
     "@types/react-dom": "^18.2.16",
     "@types/swiper": "^6.0.0",
     "astro": "^3.5.7",
+    "axios": "^1.6.8",
     "nanostores": "^0.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
